<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_live_tv"
        android:icon="@drawable/ic_live_tv"
        android:title="@string/nav_live_tv" />
    <item
        android:id="@+id/nav_movies"
        android:icon="@drawable/ic_movie"
        android:title="@string/nav_movies" />
    <item
        android:id="@+id/nav_series"
        android:icon="@drawable/ic_series"
        android:title="@string/nav_series" />
    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_favorite"
        android:title="@string/nav_favorites" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>
